# factoriobot

./: flake.nix  pyproject.toml
factoriobot/: __main__.py
