[tool.poetry]
name = "factoriobot"
version = "0.1.0"
description = ""
authors = ["Grayson Head <grayson@graysonhead.net>"]

[tool.poetry.dependencies]
python = "^3.10"
rcon = "^2.2.0"
discord-webhook = "^0.16.3"

[tool.poetry.dev-dependencies]
Sphinx = "^5.0.1"
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
factoriobot = "factoriobot.__main__:main"